--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -29,4 +29,7 @@ chrono = "0.4"
 bytesize = "1"
 libc = "0.2"
 tokio = { version = "1", features = ["full"] }
+futures = "0.3"
+rayon = "1.8"
+uuid = { version = "1.0", features = ["v4"] }
 
