--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -29,6 +29,7 @@ chrono = "0.4"
 bytesize = "1"
 libc = "0.2"
 tokio = { version = "1", features = ["full"] }
+tokio-util = { version = "0.7", features = ["rt"] }
 futures = "0.3"
 rayon = "1.8"
 uuid = { version = "1.0", features = ["v4"] }
