--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -25,7 +25,7 @@ serde_json = "1"
 sysinfo = "0.30"
 walkdir = "2"
 dirs = "5"
-chrono = "0.4"
+chrono = { version = "0.4", features = ["serde"] }
 bytesize = "1"
 libc = "0.2"
 tokio = { version = "1", features = ["full"] }
@@ -37,6 +37,11 @@ dashmap = "5.5"
 lru = "0.12"
 lazy_static = "1.4"
 num_cpus = "1.16"
+regex = "1.10"
+sha2 = "0.10"
+
+[dev-dependencies]
+tempfile = "3.8"
 
 [features]
 default = ["parallel-scan", "metrics"]
