feat(app): implement Tauri application module with system monitoring and optimization features
Add new app module with comprehensive system monitoring, file cleaning, and memory optimization capabilities. Includes Tauri commands for system info retrieval, process management, and resource optimization. Refactor existing code into modular structure with feature flags for app-specific functionality.

BREAKING CHANGE: Existing application entry point moved to app module with feature-gated dependencies

--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "type": "module",
   "scripts": {
     "tauri": "tauri",
-    "dev": "OS_ACTIVITY_MODE=disable tauri dev",
-    "build": "tauri build"
+    "dev": "OS_ACTIVITY_MODE=disable tauri dev --features app",
+    "build": "tauri build --features app"
   },
   "devDependencies": {
     "@tauri-apps/cli": "^2"
