--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -18,8 +18,8 @@ crate-type = ["staticlib", "cdylib", "rlib"]
 tauri-build = { version = "2", features = [] }
 
 [dependencies]
-tauri = { version = "2", features = [] }
-tauri-plugin-opener = "2"
+tauri = { version = "2", features = [], optional = true }
+tauri-plugin-opener = { version = "2", optional = true }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 sysinfo = "0.30"
@@ -46,6 +46,7 @@ tempfile = "3.8"
 
 [features]
 default = ["parallel-scan", "metrics"]
+app = ["dep:tauri", "dep:tauri-plugin-opener"]
 # Enable faster file scanning with Rayon + DashMap
 parallel-scan = []
 # Enable metadata caching structures (not required for core scanning)
@@ -54,3 +55,8 @@ metadata-cache = []
 cache-refresh = ["metadata-cache"]
 # Lightweight operation timing/metrics helpers
 metrics = []
+
+[[bin]]
+name = "macos-optimizer"
+path = "src/main.rs"
+required-features = ["app"]
